# pgoutput-decoder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  DESIGN.md  README.md  RELEASE.md  RFC_GROUP_BY_TRANSACTIONS.md  example_debezium.py  justfile  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
examples/: README.md  background_thread.py  basic_cdc.py  celery_integration.py  setup_postgres.sql  sync_wrapper.py  test_replication.rs
plans/infra/: GITHUB_ACTIONS_COST.md
python/pgoutput_decoder/: __init__.py  exceptions.py
src/: lib.rs  replication.rs  utils.rs
src/pgoutput/: decoder.rs  messages.rs  mod.rs  types.rs
tests/: README.md  TEST_COVERAGE.md  conftest.py  test_acknowledgement.py  test_ecommerce_comprehensive.py  test_json_serialization.py  test_types.py
