[package]
name = "pgoutput-decoder"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "_pgoutput_decoder"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py312"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1.41", features = ["full"] }
bytes = "1.8"
postgres-protocol = "0.6"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
hex = "0.4"
futures = "0.3"
urlencoding = "2.1"
pgwire-replication = "0.2"

[dev-dependencies]
anyhow = "1.0"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

[[example]]
name = "test_replication"
path = "examples/test_replication.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
