[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pgoutput-decoder"
version = "0.1.0"
description = "High-performance PostgreSQL logical replication (CDC) library with Rust backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = { text = "MIT" }
authors = [
    { name = "Geir Gronmo" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database",
]

[tool.maturin]
python-source = "python"
module-name = "pgoutput_decoder._pgoutput_decoder"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "docker: marks tests as requiring Docker (deselect with '-m \"not docker\"')",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0.0",
    "testcontainers[postgres]>=4.0",
    "asyncpg>=0.29",
    "ruff>=0.8",
]
